chart helm release version

--- a/.github/workflows/publish-chart.yaml
+++ b/.github/workflows/publish-chart.yaml
@@ -26,5 +26,6 @@ jobs:
         with:
           charts_repo_url: "https://krolval.github.io/helm-charts/"
           charts_dir: "./deploy/helm"
+          version: ${{ env.RELEASE_VERSION }}
         env:
           CR_TOKEN: "${{ secrets.CR_TOKEN }}"
