--- a/.github/workflows/publish-chart.yaml
+++ b/.github/workflows/publish-chart.yaml
@@ -25,7 +25,7 @@ jobs:
         uses: helm/chart-releaser-action@v1.0.0
         with:
           charts_repo_url: "https://krolval.github.io/helm-charts/"
-          charts_dir: "./deploy/helm"
+          charts_dir: "./deploy"
           version: ${{ env.RELEASE_VERSION }}
           config: cr.yaml
         env:
